--- a/render.yaml
+++ b/render.yaml
@@ -29,7 +29,7 @@ services:
     runtime: static
     region: oregon
     plan: free
-    buildCommand: cd frontend && npm install && npm run build
+    buildCommand: cd frontend && npm install && npm run build && cp public/_redirects dist/_redirects
     staticPublishPath: frontend/dist
     envVars:
       - key: VITE_SUPABASE_URL
